--- a/src/main/resources/templates/Home/Employer.html
+++ b/src/main/resources/templates/Home/Employer.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+
+<p>This is an update to dev section</p>
   <form method="post" th:object="${Employer}" th:action="@{/submit}" >
     
     <label for="Name">Name</label><br>
