update dev + update

--- a/src/main/resources/templates/Home/Employer.html
+++ b/src/main/resources/templates/Home/Employer.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<p>This is an update to dev section</p>
+<p>This is an update to dev section ++ update</p>
   <form method="post" th:object="${Employer}" th:action="@{/submit}" >
     
     <label for="Name">Name</label><br>
