--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,23 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import "@fontsource/montserrat-alternates";
 @import "tailwindcss";
 
 :root{
     font-family:"Montserrat", sans-serif;
 }
+
+@theme{
+    --font-Montserrat-Alternates: Montserrat Alternates;
+}
+
+
 @layer utilities{
     .OutlineText {
         -webkit-text-stroke-color: #D9D9D9;
         -webkit-text-stroke-width: 1px;
         paint-order: stroke fill;
     }
-}
-
-body, html {
-
-
 }
