--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=calendar_today");
+
 @import "tailwindcss";
 
 
@@ -21,6 +22,9 @@
         -webkit-text-stroke-color: #D9D9D9;
         -webkit-text-stroke-width: 1px;
         paint-order: stroke fill;
+    }
+    .bg-gradient-custom{
+        background: linear-gradient(to right , #dbeafe 95%, #1e3a8a 5%);
     }
 }
 
