updated doctor dashboard added notification system

--- a/src/components/FilePicker/DragDropFile.css
+++ b/src/components/FilePicker/DragDropFile.css
@@ -1,7 +1,6 @@
 .drop-file-input {
     position: relative;
-    width: 400px;
-    height: 200px;
+
     border: 2px dashed var(--border-color);
     border-radius: 20px;
 
@@ -28,46 +27,29 @@
 }
 
 .drop-file-input__label {
-    text-align: center;
     color: var(--txt-second-color);
-    font-weight: 600;
+    font-weight: 200;
     padding: 10px;
+
 }
 
 .drop-file-input__label img {
     width: 100px;
 }
 
-.drop-file-preview {
-    margin-top: 30px;
-}
-
-.drop-file-preview p {
-    font-weight: 500;
-}
 
 .drop-file-preview__title {
     margin-bottom: 20px;
 }
 
-.drop-file-preview__item {
-    position: relative;
-    display: flex;
-    margin-bottom: 10px;
-    background-color: var(--input-bg);
-    padding: 15px;
-    border-radius: 20px;
-}
 
-.drop-file-preview__item img {
-    width: 50px;
-    margin-right: 20px;
-}
 
 .drop-file-preview__item__info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 12px;
+    width: 60%;
 }
 
 .drop-file-preview__item__del {
@@ -79,9 +61,10 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 10px;
+    right: 0px;
+    padding-right: 20px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-80%) ;
     box-shadow: var(--box-shadow);
     cursor: pointer;
     opacity: 0;
