--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,15 @@
     animation: spin 1s linear infinite;
 }
 
+
+.tooltip {
+    @apply invisible absolute;
+}
+
+.has-tooltip:hover .tooltip {
+    @apply visible z-50  transform -translate-y-13 -translate-x-20;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
